@startuml er-model


title Интернет-магазин "Shop-core"

class User {
    id: uuid
    first_name: string
    last_name: string
    login: string
    password_hash: string
    role: string <<user|admin>>
    created_at: datetime
    update_at: datetime
}

class Category {
    id: uuid
    name: string
}

class Product {
    id: uuid
    name: string
    description: string
    price: decimal
    rating: float
    category_id: uuid
    created_at: datetime
    update_at: datetime
}

class Cart {
    id: uuid
    user_id: uuid
    status: string <<active|ordered>>
    created_at: datetime
    update_at: datetime
}

class CartItem {
    id: uuid
    cart_id: uuid
    product_id: uuid
    quantity: int
    price_at_add: decimal
}

class Order {
    id: uuid
    user_id: uuid
    total_price: decimal
    #status: string <<created|paid|canceled|shipped>>
    full_name: string
    phone: string
    address: string
    created_at: datetime
}

class OrderItem {
    id: uuid
    order_id: uuid
    product_id: uuid
    quantity: int
    price: decimal
}

class Review {
    id: uuid
    user_id: uuid
    product_id: uuid
    rating: int <<1..5>>
    comment: string
    created_at: datetime
}

class Promotion {
    id: uuid
    title: string
    description: string
    discount_percent: float
    starts_at: datetime
    ends_at: datetime
    is_active: bool
}

class PromotionProduct {
    promotion_id: uuid
    product_id: uuid
}

User "1" -- "0..*" Cart
User "1" -- "0..*" Order
User "1" -- "0..*" Review

Category "1" -- "0..*" Product

Product "1" -- "0..*" Review
Product "1" -- "0..*" CartItem
Product "1" -- "0..*" OrderItem
Product "1" -- "0..*" PromotionProduct

Cart "1" -- "1..*" CartItem
Order "1" -- "1..*" OrderItem

Promotion "1" -- "0..*" PromotionProduct

@enduml
